gdb-server/src/target/desc/snapshots/probe_rs_gdb_server__target__desc__test__target_description_microbit.snap
---
source: gdb-server/src/target/desc/test.rs
assertion_line: 10
expression: description
---
<?xml version="1.0"?>
        <!DOCTYPE target SYSTEM "gdb-target.dtd">
        <target version="1.0">
        <architecture>armv6-m</architecture></target>
